# uniqueWordCounter

./: README.md  cfg.sh  run.sh
header/: threadsafe_queue.h
src/: CMakeLists.txt  file_reader.cpp  file_reader.h  main.cpp  thread_pool.cpp  thread_pool.h  threadsafe_queue.h
test/: duplicated16_words.txt  duplicated64_words.txt  duplicated_words.txt  words.txt
